    representation to that in spin-orbital representation
  - DOCI solver, DOCI-CASCI, and DOCI-CASSCf
  - Support of RSH functionals in DF and sgX methods
  - Add RSH functionals for all PBC DFT methods
  - Semiempirical method MINDO/3
  - Analytical nuclear gradients with density-fitting
  - Analytical nuclear hessian with density-fitting
  - Thermo-chemistry and frequency analysis
* Improved
  - Optimized regular get_j and density-fitting get_j
  - Faster k-CCSD(T)
  - Davidson diagonalization for multi-roots
  - memory usage in CCSD
  - Molecular orientation does not need to be changed when symmetry is enabled
* Bugfix
  - Carbon ANO data
  - Initial guess for EOM-KCCSD
  - state-averge CASSCF analytical nuclear gradietns
  - ddCOSMO self-consistency (as fast solvent) for post-SCF methods
  - range-separation paramter omega customization in RSH functionals


PySCF 1.6.5 (2019-11-17)
------------------------
* Added
  - spin_square method for UCCSD
* Improved
  - Handling ".xc = None" (run DFT without exchage)
* Fixed
  - Unit conversion bug between eV and wavenumber in TDDFT
  - KGHF orbital gradients
  - Analytical gradients for implicit solvent model in geometry optimization


PySCF 1.6.4 (2019-09-14)
------------------------
* Added
  - aug-cc-pwCV*Z basis
* Improved
  - Memory footprint of FCI module
  - Mole.spin initialization. A guess can be made for spin multiplicity based on
    neutral system.
* Fixed
  - PBC SCF orbital canonicalization
  - Missed complex conjugation in HF/KS modules
  - SHCI runtime directory
  - Normalization issue for Cartesian basis in Molden output
  - cc-pwCV5Z basis


PySCF 1.6.3 (2019-07-28)
------------------------
* Added
  - cube customization for cubegen
  - Integral prescreening for RSH functional when evaluating K matrix
* Improved
  - Performance of exchange integrals in RSH functionals
* Fixed
  - handle xc = '' in eval_ao
  - cube shape in cubegen
  - Basis parser when parsing last elements in some basis set