@@ -412,10 +412,7 @@ class GHF(hf.SCF):
     def init_guess_by_huckel(self, mol=None):
         if mol is None: mol = self.mol
         logger.info(self, 'Initial guess from on-the-fly Huckel, doi:10.1021/acs.jctc.8b01089.')
-        mo_energy, mo_coeff = hf.init_guess_by_huckel(mol)
-        mo_occ = hf.get_occ(self, mo_energy, mo_coeff)
-        dm = hf.make_rdm1(mo_coeff, mo_occ)
-        return _from_rhf_init_dm(dm)
+        return _from_rhf_init_dm(hf.init_guess_by_huckel(mol))
 
     @lib.with_doc(hf.SCF.init_guess_by_chkfile.__doc__)
     def init_guess_by_chkfile(self, chkfile=None, project=None):
